--- a/angela.html
+++ b/angela.html
@@ -7,10 +7,7 @@
     <title>😒Paul's personal site</title>
   </head>
   <body>
-    <img
-      src="html-css-course-master\starter\02-HTML-Fundamentals\laura-jones.jpg"
-      alt=""
-    />
+    <img src="laura-jones.jpg" alt="" />
     <h1>😒Paul</h1>
     <p>
       <em> Founder and CTO of <strong>App Brewery</strong>.</em>
